Better images, fixed blockquote cite positioning on mobile.

--- a/.themes/ethan/sass/application.scss
+++ b/.themes/ethan/sass/application.scss
@@ -27,6 +27,10 @@ $lighter-secondary: #42E37F;
 @media handheld, only screen and (max-width: 767px) { /* Handheld devices. */
 	blockquote {
 		text-align: left;
+		
+		cite p {
+			left: 0px !important;
+		}
 	}
 }
 
